force-app/main/default/objects/Traveler__c/fields/Survey_Answered_On__c.field-meta.xml
<CustomField>
    <fullName>Survey_Answered_On__c</fullName>
    <description
  >When this traveller submitted their feedback, stamped by GxFeedbackService as it saves their response. It is what stops a second answer from the same link and what keeps a reminder from reaching someone who has already answered. The booking's Feedback_Received_On__c still records the first answer for the trip.</description>
    <inlineHelpText
  >When this traveller answered the feedback survey. Set automatically.</inlineHelpText>
    <label>Feedback Answered On</label>
    <type>DateTime</type>
</CustomField>