force-app/main/default/objects/Traveler__c/fields/Survey_Link__c.field-meta.xml
<CustomField>
    <fullName>Survey_Link__c</fullName>
    <description
  >This traveller's own feedback link, assembled from their booking's number and their Survey_Secret__c, the same way Booking__c.Survey_Link__c is built for a main contact. The base address comes from the Gx_Feedback_Setting__mdt Default record, so staging and production each resolve to their own site. Blank until GxFeedbackDispatch has invited this traveller. It is what the team can copy when a guest asks for their link again.</description>
    <formula>IF(
  OR(ISBLANK(Survey_Secret__c), ISBLANK(TravelQuote__r.BookingNumber__c)),
  &quot;&quot;,
  $CustomMetadata.Gx_Feedback_Setting__mdt.Default.Survey_Base_URL__c
    &amp; &quot;?b=&quot; &amp; TravelQuote__r.BookingNumber__c
    &amp; &quot;&amp;k=&quot; &amp; Survey_Secret__c
)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <inlineHelpText
  >This traveller's personal feedback link. Generated automatically; do not edit.</inlineHelpText>
    <label>Survey Link</label>
    <type>Text</type>
</CustomField>