force-app/main/default/objects/Traveler__c/fields/Survey_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>Survey_Reminder_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Set once this traveller has been reminded, so one reminder stays one reminder per person. GxFeedbackDispatch sets it in the same committed update as the link, before the reminder email leaves, which means a reminder whose email fails is not retried: with a guest's inbox at stake, under-reminding is the safer failure.</description>
    <inlineHelpText
  >Whether this traveller has already had a feedback reminder. Set automatically.</inlineHelpText>
    <label>Survey Reminder Sent</label>
    <type>Checkbox</type>
</CustomField>