force-app/main/default/objects/Traveler__c/fields/Survey_Secret__c.field-meta.xml
<CustomField>
    <fullName>Survey_Secret__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description
  >This traveller's own feedback link. Minted by GxFeedbackDispatch when the traveller is invited, and the only thing that opens their survey: the link is ?b=&lt;booking number&gt;&amp;k=&lt;this&gt;, and the survey resolves the person by this value alone, because BookingNumber__c is shared by a group booking and all of its participant bookings. Unique and case sensitive so two travellers can never share a link, and an external id so the lookup by secret is indexed.</description>
    <externalId>true</externalId>
    <inlineHelpText
  >The traveller's personal feedback link. Set automatically; never edit or share it.</inlineHelpText>
    <label>Survey Secret</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>