force-app/main/default/objects/Traveler__c/fields/Survey_Sent_On__c.field-meta.xml
<CustomField>
    <fullName>Survey_Sent_On__c</fullName>
    <description
  >When this traveller was last asked for feedback, set by GxFeedbackDispatch as it prepares their invitation and moved forward again by their reminder. Read by the reminder pass, which waits Reminder_Delay_Days__c after this moment, and by the survey's expiry check, so a reminded traveller gets a full validity window from the day they were last asked. The booking's own Survey_Sent_On__c still records when the trip's first invitation went out.</description>
    <inlineHelpText
  >When we last asked this traveller for feedback. Set automatically.</inlineHelpText>
    <label>Survey Sent On</label>
    <type>DateTime</type>
</CustomField>